infrastructure/routes/pihole-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole

spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system

  hostnames:
    - pihole.k8s.home

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: pihole-web
          port: 80
